[package]
name = "rucli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memmem = "0.1.1"
quick-xml = { version = "0.36.0", features = ["serialize"] }
serde = { version = "1.0", features = [ "derive" ] }
ssh2 = "0.9"
ssh2-config = "0.2"

[lib]
name = "rucli"
path = "src/lib.rs"
